--- a/dev/sass/components/careers/_careers.scss
+++ b/dev/sass/components/careers/_careers.scss
@@ -92,6 +92,7 @@
       }
 
       @media (max-width: 991px) {
+        padding-left: 0px !important;
         h1 { text-align: center; }
       }
 
